Project

General

Profile

Actions

Bug #17239

closed

radosgw-admin period update reverts deleted zonegroup

Added by Orit Wasserman over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel,kraken
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

start the radosgw without any multisite configuration (default zonegroup and zone will be created)
create a realm , set it as default.
update zonegroup default and zone default using set commands
(this will cause the realm id to change)
update and commit the period

create a new master zonegroup zg0 and a new zg0zo that will the master of zg0
try to update the period, you will get an error as both zonegroups are master.
remove zone default from default zonegroup and delete it.
try period update
the same error and zonegroup default is part of the staging period

workround:
delete .rgw.root: rados purge .rgw.root --yes-i-really-really-mean-it
create a new configuration when the gateway is down:
create a new realm and set it as default
radosgw-admin zonegroup set < json (with the new realm id)
radosgw-admin zoneg set < json (with the new realm id)
set zonegroup and zone as default
period update --commit

reproducible on current master


Related issues 3 (0 open3 closed)

Related to rgw - Bug #16839: "default" zone and zonegroup cannot be added to a realmResolved07/27/2016

Actions
Copied to rgw - Backport #18712: jewel: radosgw-admin period update reverts deleted zonegroup ResolvedNathan CutlerActions
Copied to rgw - Backport #18713: kraken: radosgw-admin period update reverts deleted zonegroup ResolvedNathan CutlerActions
Actions #1

Updated by Sage Weil over 7 years ago

  • Priority changed from Normal to Urgent
Actions #2

Updated by Casey Bodley over 7 years ago

  • Related to Bug #16839: "default" zone and zonegroup cannot be added to a realm added
Actions #3

Updated by Yehuda Sadeh over 7 years ago

  • Priority changed from Urgent to High
Actions #4

Updated by Orit Wasserman over 7 years ago

  • Status changed from New to In Progress
  • Assignee changed from Casey Bodley to Orit Wasserman
Actions #6

Updated by Orit Wasserman over 7 years ago

  • Status changed from In Progress to Fix Under Review
  • Backport changed from jewel to jewel,kraken
Actions #7

Updated by Yehuda Sadeh about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #8

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #18712: jewel: radosgw-admin period update reverts deleted zonegroup added
Actions #9

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #18713: kraken: radosgw-admin period update reverts deleted zonegroup added
Actions #10

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF