rgw: clear master_zonegroup when reseting RGWPeriodMap

Fixes: http://tracker.ceph.com/issues/17239
Signed-off-by: Orit Wasserman <owasserm@redhat.com>
(cherry picked from commit d8f42fe6be659c1d48bf04b30aa54ad616936145)